// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PerformanceSpecCard stories snapshot > Experiential story renders and matches snapshot 1`] = `
<div
  class="w-full border-t border-border pt-6"
>
  <div
    class="hidden md:block"
  >
    <h2
      class="mb-4 text-base font-semibold text-foreground"
    >
      Performance Specs
    </h2>
    <dl
      class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:grid-cols-5"
    >
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Cushioning
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          Balanced cushioning for everyday miles
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Heel-to-Toe Drop
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          8 mm offset from heel to toe
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Weight
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          255 g
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Support
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          Gentle guidance to counter overpronation
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Terrain
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          Built for pavement and paved paths
        </dd>
      </div>
    </dl>
  </div>
  <div
    class="md:hidden"
  >
    <div
      class="w-full"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="closed"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-_r_3_"
            aria-expanded="false"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start justify-between gap-4 rounded-ui py-4 transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left font-semibold text-sm"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="closed"
            id="radix-_r_2_"
            type="button"
          >
            View Specs
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_2_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="closed"
          hidden=""
          id="radix-_r_3_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PerformanceSpecCard stories snapshot > NoSpecs story renders and matches snapshot 1`] = `null`;

exports[`PerformanceSpecCard stories snapshot > PartialSpecs story renders and matches snapshot 1`] = `
<div
  class="w-full border-t border-border pt-6"
>
  <div
    class="hidden md:block"
  >
    <h2
      class="mb-4 text-base font-semibold text-foreground"
    >
      Performance Specs
    </h2>
    <dl
      class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:grid-cols-5"
    >
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Cushioning
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          <span
            class="inline-flex items-center gap-2"
          >
            <span
              aria-hidden="true"
              class="inline-flex gap-1"
            >
              <span
                class="inline-block size-2 rounded-full bg-foreground"
              />
              <span
                class="inline-block size-2 rounded-full bg-muted"
              />
              <span
                class="inline-block size-2 rounded-full bg-muted"
              />
            </span>
            <span>
              Light
            </span>
          </span>
        </dd>
      </div>
    </dl>
  </div>
  <div
    class="md:hidden"
  >
    <div
      class="w-full"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="closed"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-_r_5_"
            aria-expanded="false"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start justify-between gap-4 rounded-ui py-4 transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left font-semibold text-sm"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="closed"
            id="radix-_r_4_"
            type="button"
          >
            View Specs
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_4_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="closed"
          hidden=""
          id="radix-_r_5_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PerformanceSpecCard stories snapshot > Technical story renders and matches snapshot 1`] = `
<div
  class="w-full border-t border-border pt-6"
>
  <div
    class="hidden md:block"
  >
    <h2
      class="mb-4 text-base font-semibold text-foreground"
    >
      Performance Specs
    </h2>
    <dl
      class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:grid-cols-5"
    >
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Cushioning
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          <span
            class="inline-flex items-center gap-2"
          >
            <span
              aria-hidden="true"
              class="inline-flex gap-1"
            >
              <span
                class="inline-block size-2 rounded-full bg-foreground"
              />
              <span
                class="inline-block size-2 rounded-full bg-foreground"
              />
              <span
                class="inline-block size-2 rounded-full bg-muted"
              />
            </span>
            <span>
              Moderate
            </span>
          </span>
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Heel-to-Toe Drop
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          8 mm
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Weight
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          255 g
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Support
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          <span
            class="inline-flex items-center gap-2"
          >
            <span
              aria-hidden="true"
              class="inline-flex gap-1"
            >
              <span
                class="inline-block size-2 rounded-full bg-foreground"
              />
              <span
                class="inline-block size-2 rounded-full bg-foreground"
              />
              <span
                class="inline-block size-2 rounded-full bg-muted"
              />
            </span>
            <span>
              Stability
            </span>
          </span>
        </dd>
      </div>
      <div
        class="flex flex-col gap-1"
      >
        <dt
          class="text-xs font-medium uppercase tracking-wide text-muted-foreground"
        >
          Terrain
        </dt>
        <dd
          class="text-sm font-semibold text-foreground"
        >
          Road
        </dd>
      </div>
    </dl>
  </div>
  <div
    class="md:hidden"
  >
    <div
      class="w-full"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="closed"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="closed"
        >
          <button
            aria-controls="radix-_r_1_"
            aria-expanded="false"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start justify-between gap-4 rounded-ui py-4 transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left font-semibold text-sm"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="closed"
            id="radix-_r_0_"
            type="button"
          >
            View Specs
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_0_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="closed"
          hidden=""
          id="radix-_r_1_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
        />
      </div>
    </div>
  </div>
</div>
`;
